fixed width on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -10,7 +10,7 @@
   
   .column {
     float: left;
-    width: 50%;
+    column-width: 50%;
   }
   
   /* Clear floats after the columns */
